# practice

./: README.md
algo_data/: code2_1.cpp
algo_data/chapter_1/: a.out  code_1.cpp  code_2.cpp
c_practice/: a.out  code_1.c  gomokupuz.c  pointa.c  practicestr.c  primenum.c  slidepuz.c  str.c
c_practice/class_test/: a.out  retest.c  test1.c  test2.c  test3.c  test4.c
cpp_practice/: .gitignore  HelloWorld.cpp  a.out  ahi.py  array.cpp  bool.cpp  compound_assignment_operator.cpp  for_break_conti.cpp  four_arithmetic_operations.c  function.cpp  if_for.cpp  input.cpp  loop_range_for.cpp  multidimensional_array.cpp  multiple_loops.cpp  recursive_func.cpp  reference.cpp  scope.cpp  stl_func.cpp  str_char.cpp  variable.cpp  while.cpp
cpp_practice/debug/: HelloWorld  if
django_peactice/helloworld/: .gitignore  Pipfile  db.sqlite3
flask_practice/flask_tutorial/: .gitignore  Pipfile
flutter_practice/alarm_test/: README.md  pubspec.yaml
flutter_practice/flutter_kei_vol_1/: README.md  pubspec.yaml
flutter_practice/second_app/: pubspec.yaml
flutter_practice/set_time/: README.md  pubspec.yaml
flutter_practice/test_app/: pubspec.yaml
js_practice/: oxpuz.html  test.html
py_practice/: .gitignore  1_task.ipynb  Pipfile  aaa.py  announcement_order.py  answer.py  ex1.py  mikimiki.py  practice.py  script.py  test.py
rust_practice/: .gitignore
scip-hello-world/: knapsack-problem.lp  knapsack-problem.sol  n-queen.lp  n-queen.sol  sample.lp  sample.sol
scip-hello-world/scip-pyomo-test/: main.py  pyproject.toml
vue_practice/: package.json
(+214 files in other folders)
