[tool.poetry]
name = "scip-pyomo-test"
version = "0.1.0"
description = ""
authors = ["take-cantik <take.cantik17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pyomo = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

